# linuxExercises

ch2-compareEnv/: CMakeLists.txt  main.cpp
ch2-getopt/: CMakeLists.txt  getopt.cpp  getopt.h  test1.cpp  test2.cpp  test3.cpp
ch2-manualOptProc/: CMakeLists.txt  main.cpp
ch3-readline/: CMakeLists.txt  generate.cpp  readline.cpp  readline.h  test.cpp
ch4-copy/: CMakeLists.txt  main.cpp
ch4-myumask/: CMakeLists.txt  main.cpp
ch4-perror/: CMakeLists.txt  perror.cpp  perror.h  test.cpp
ch4-truncate/: CMakeLists.txt  main.cpp
ch5-catdir/: CMakeLists.txt  controller.cpp  controller.h  directory.cpp  directory.h  main.cpp  utils.cpp  utils.h
ch5-mkdir/: CMakeLists.txt  controller.cpp  controller.h  main.cpp  makedir.cpp  makedir.h
ch5-pwd/: CMakeLists.txt  main.cpp
cmake/: warnings.cmake
